skims/test/data/lib_root/f024/cfn_ec2_allows_anyone_to_admin_ports.yaml
---
Resources:
  securityGroup1:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 8888
          IpProtocol: tcp
          ToPort: 8888
      SecurityGroupEgress:
        - CidrIp: 34.229.161.227/16
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroup2:
    Properties:
      GroupDescription: groupDescription2
    Type: AWS::EC2::SecurityGroup
  securityGroup3:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
    Type: AWS::EC2::SecurityGroup
  securityGroupIngress1:
    Properties:
      CidrIpv6: ::/0
      FromPort: 27017
      GroupId:
        Ref: securityGroup2
      GroupName: securityGroup2
      IpProtocol:
        Ref: IpInsecureProtocol
      ToPort: 27017
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress2:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 3306
      GroupName: securityGroup2
      IpProtocol: tcp
      ToPort: 3306
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress3:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 1433
      GroupName: securityGroup2
      IpProtocol: tcp
      ToPort: 1433
    Type: AWS::EC2::SecurityGroupIngress
