skims/test/data/lib_root/f024/cfn_ec2_unrestricted_protocols.yaml
---
Resources:
  securityGroup1:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 34.229.161.227/16
          FromPort: 443
          IpProtocol: '-1'
          ToPort: 443
      SecurityGroupEgress:
        - CidrIp: 34.229.161.227/16
          FromPort: 8080
          IpProtocol: tcp
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroup2:
    Properties:
      GroupDescription: groupDescription2
    Type: AWS::EC2::SecurityGroup
  securityGroup3:
    Properties:
      GroupDescription: groupDescription1
      SecurityGroupIngress:
        - CidrIp: 34.229.161.227/16
          FromPort: 22
          IpProtocol: '-1'
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 34.229.161.227/16
          FromPort: 8080
          IpProtocol: '-1'
          ToPort: 8080
    Type: AWS::EC2::SecurityGroup
  securityGroupEgress1:
    Properties:
      CidrIpv6: 2002::1234:abcd:ffff:c0a8:101/64
      FromPort: 1434
      GroupId:
        Ref: securityGroup2
      IpProtocol: '-1'
      ToPort: 1434
    Type: AWS::EC2::SecurityGroupEgress
  securityGroupEgress2:
    Properties:
      CidrIpv6: 2002::1234:abcd:ffff:c0a8:101/64
      FromPort: 8022
      GroupId:
        Ref: securityGroup2
      IpProtocol: '-1'
      ToPort: 8022
    Type: AWS::EC2::SecurityGroupEgress
  securityGroupIngress1:
    Properties:
      CidrIpv6: 2002::1234:abcd:ffff:c0a8:101/64
      FromPort: 22
      GroupId:
        Ref: securityGroup2
      GroupName: securityGroup2
      IpProtocol:
        Ref: IpInsecureProtocol
      ToPort: 22
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress2:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 8080
      GroupName: securityGroup2
      IpProtocol: '-1'
      ToPort: 8080
    Type: AWS::EC2::SecurityGroupIngress
  securityGroupIngress3:
    Properties:
      CidrIp:
        Ref: IpSecurityGroup
      FromPort: 8080
      GroupName: securityGroup2
      IpProtocol: '-1'
      ToPort: 8080
    Type: AWS::EC2::SecurityGroupIngress
